--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe> -->
     </section>
-    <div class="is-size-4 has-text-weight-bold has-text-centered"> Hours spent practicing:
+    <div class="is-size-4 has-text-weight-bold has-text-centered"> Minutes spent practicing:
     </div>
     <div class="is-size-4 has-text-weight-bold has-text-centered">
         <span id="counter"></span>
