--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    
     <nav class="navbar" role="navigation" aria-label="dropdown navigation">
         <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
@@ -48,6 +49,7 @@
     <div id="appendIntervals" class="is-size-4 has-text-centered"></div>
     <div class="card-content level-item has-text-centered">
         <figure class="image" id="figureImage"></figure>
+        <div id="play"></div>
     </div>
     <div class="columns">
         <div class="column is-2"></div>
