--- a/index.html
+++ b/index.html
@@ -56,12 +56,17 @@
         </div>
         <div class="column is-2"></div>
     </div>
+    <iframe id="bluesVideo"></iframe>
+    <div id='playBlues' class='level-item has-text-centered'></div>
     <h3 id="backingText" class="is-size-5 level-item has-text-centered"></h3>
     <section id="backing-track" class="level-item has-text-centered">
     </section>
     <h4 id="popularText" class="is-size-5 level-item has-text-centered"></h4>
     <section id="popular-song" class="level-item has-text-centered">
     </section>
+    <!-- adding div to write video to -->
+
+
     <div class="is-size-4 has-text-weight-bold has-text-centered"> Minutes spent practicing:
     </div>
     <div class="is-size-4 has-text-weight-bold has-text-centered">
