--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         </div>
         <div class="column is-2"></div>
     </div>
-    <iframe id="bluesVideo"></iframe>
+    <div class="card-content level-item has-text-centered">
+        <iframe class="level-item has-text-centered" id="bluesVideo"></iframe>
+    </div>
     <div id='playBlues' class='level-item has-text-centered'></div>
     <h3 id="backingText" class="is-size-5 level-item has-text-centered"></h3>
     <section id="backing-track" class="level-item has-text-centered">
