--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="column is-2"></div>
     </div>
-    <div class="card-content level-item has-text-centered">
+    <div class="card-content level-item has-text-centered" id="youtubeVideo">
         <iframe class="level-item has-text-centered" id="bluesVideo"></iframe>
     </div>
     <div id='playBlues' class='level-item has-text-centered'></div>
