--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 </head>
 
 <body>
-
     <nav class="navbar" role="navigation" aria-label="dropdown navigation">
         <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
-                Resources
+                Modules
             </a>
 
             <div class="navbar-dropdown">
@@ -58,34 +57,25 @@
         </div>
         <div class="column is-2"></div>
     </div>
+    <div class="card-content level-item has-text-centered" id="youtubeVideo">
+        <iframe class="level-item has-text-centered" id="bluesVideo"></iframe>
+    </div>
+    <div id='playBlues' class='level-item has-text-centered'></div>
     <h3 id="backingText" class="is-size-5 level-item has-text-centered"></h3>
     <section id="backing-track" class="level-item has-text-centered">
     </section>
     <h4 id="popularText" class="is-size-5 level-item has-text-centered"></h4>
     <section id="popular-song" class="level-item has-text-centered">
     </section>
+    <!-- adding div to write video to -->
+
+
     <div class="is-size-4 has-text-weight-bold has-text-centered"> Minutes spent practicing:
     </div>
     <div class="is-size-4 has-text-weight-bold has-text-centered">
         <span id="counter"></span>
-        <p class="buttons level-item has-text-centered">
-            <button id="downBtn" class="button is-small is-danger">
-                <span class="icon">
-                    <i class="fas fa-arrow-down fa-lg"></i>
-                </span>
-            </button>
-            <button id="upBtn" class="button is-small is-danger">
-                <span class="icon">
-                    <i class="fas fa-arrow-up fa-lg"></i>
-                </span>
-            </button>
-            <button id="clearBtn" class="button is-small is-danger">
-                <span class="icon">
-                    <i class="fas fa-eraser"></i>
-                </span>
-            </button>
-        </p>
     </div>
+    <p id="counterBtns" class="counterBtns level-item has-text-centered"></p>
     <script src="script.js">
     </script>
 </body>
