fixed issue with video embed and added page refresh on scale practice navigation tab

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </a>
 
             <div class="navbar-dropdown">
-                <a id="scalesTab" class="navbar-item">
+                <a href="index.html" id="scalesTab" class="navbar-item">
                     Scale Practice
                 </a>
                 <a id="bluesTab" class="navbar-item">
