changed file name of blues chart in code to match file name

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <script src="script.js">
     </script>
 </body>
-<footer class="footer">
+<footer class="footer footer-background-color">
     <div class="content is-size-5">
         <p class="has-text-centered">Additional Resources:</p>
         <div class="columns">
