--- a/index.html
+++ b/index.html
@@ -14,25 +14,26 @@
 </head>
 
 <body>
-    <nav class="navbar" role="navigation" aria-label="dropdown navigation">
+    <nav class="navbar is-size-4 is-primary" role="navigation" aria-label="dropdown navigation">
         <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
                 Modules
             </a>
-            <div class="navbar-dropdown">
+            <div class="navbar-dropdown is-size-5">
                 <a href="index.html" id="scalesTab" class="navbar-item">
                     Scale Practice
                 </a>
-                <a id="bluesTab" class="navbar-item">
+                <a id="bluesTab" class="navbar-item is-size-5">
                     Learn the Blues
                 </a>
-                <hr class="navbar-divider">
+                <hr class="navbar-divider is-size-5">
                 <div class="navbar-item">
                     Version 0.9.1
                 </div>
             </div>
         </div>
     </nav>
+    <br>
     <h1 id="heading" class="is-size-2 has-text-weight-bold has-text-centered"></h1>
     <div class="columns">
         <div class="column is-1"></div>
@@ -41,13 +42,14 @@
         </div>
         <div class="column is-1"></div>
     </div>
+    <br>
     <div id="buttons" class="columns level-item has-text-centered">
         <div id="btnCol" class="field has-addons is-centered">
         </div>
     </div>
-    <div id="appendKey" class="is-size-4 has-text-centered"></div>
-    <div id="appendSteps" class="is-size-4 has-text-centered"></div>
-    <div id="appendIntervals" class="is-size-4 has-text-centered"></div>
+    <div id="appendKey" class="is-size-3 has-text-centered has-text-weight-bold"></div>
+    <div id="appendSteps" class="is-size-3 has-text-centered "></div>
+    <div id="appendIntervals" class="is-size-3 has-text-centered"></div>
     <div class="card-content level-item has-text-centered">
         <figure class="image" id="figureImage"></figure>
         <div id="play"></div>
@@ -63,20 +65,21 @@
         <iframe class="level-item has-text-centered" id="bluesVideo"></iframe>
     </div>
     <div id='playBlues' class='level-item has-text-centered'></div>
-    <h3 id="backingText" class="is-size-5 level-item has-text-centered"></h3>
+    <h3 id="backingText" class="is-size-5 level-item has-text-centered has-text-weight-bold"></h3>
     <section id="backing-track" class="level-item has-text-centered">
     </section>
-    <h4 id="popularText" class="is-size-5 level-item has-text-centered"></h4>
+    <br>
+    <h4 id="popularText" class="is-size-5 level-item has-text-centered has-text-weight-bold"></h4>
     <section id="popular-song" class="level-item has-text-centered">
     </section>
+    <br>
     <div id="artistName" class="albumInfo level-item has-text-centered is-size-4">
-        <br>
     </div>
+    <br>
     <div id="songName" class="albumInfo level-item has-text-centered is-size-4">
-        <br>
     </div>
-    <div id="albumInfo" class="albumInfo level-item has-text-centered is-size-4">
-        <br>
+    <br>
+    <div id="albumInfo" class="albumInfo level-item has-text-centered is-size-4 ">
     </div>
     <br>
     <div class="columns">
@@ -97,9 +100,10 @@
     <script src="script.js">
     </script>
 </body>
-<footer class="footer">
+<br><br>
+<footer class="footer has-background-grey-lighter">
     <div class="content is-size-5">
-        <p class="has-text-centered">Additional Resources:</p>
+        <p class="has-text-centered has-text-weight-bold is-size-4">Additional Resources:</p>
         <div class="columns">
             <div class="column is-3"></div>
             <div class="column is-3">
