--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <div id="appendSteps" class="is-size-3 has-text-centered "></div>
     <div id="appendIntervals" class="is-size-3 has-text-centered"></div>
     <div class="card-content level-item has-text-centered">
-        <figure class="image" id="figureImage"></figure>
+        <figure class="image, box" id="figureImage"></figure>
         <div id="play"></div>
     </div>
     <div class="columns">
         <div class="column is-2"></div>
         <div class="column">
-            <figure class="bluesChart" id="bluesChart"></figure>
+            <figure class="bluesChart, box" id="bluesChart"></figure>
         </div>
         <div class="column is-2"></div>
     </div>
