--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
     <div id="appendKey" class="is-size-3 has-text-centered has-text-weight-bold"></div>
     <div id="appendSteps" class="is-size-3 has-text-centered "></div>
     <div id="appendIntervals" class="is-size-3 has-text-centered"></div>
-    <div class="card-content level-item has-text-centered">
-        <figure class="image, box" id="figureImage"></figure>
-        <div id="play"></div>
+    <div class="columns">
+        <div class="column is-2"></div>
+        <div class="column card-content level-item has-text-centered">
+            <figure class="image, box" id="figureImage"></figure>
+        </div>
+        <div class="column is-2"></div>
     </div>
+    <div id="play" class="level-item has-text-centered"></div>
     <div class="columns">
         <div class="column is-2"></div>
         <div class="column">
@@ -71,26 +75,25 @@
     <br>
     <h4 id="popularText" class="is-size-5 level-item has-text-centered has-text-weight-bold"></h4>
     <section id="popular-song" class="level-item has-text-centered">
+        <br>
     </section>
-    <br>
-    <div id="artistName" class="albumInfo level-item has-text-centered is-size-4">
+    <div id="artistName" class="albumInfo level-item has-text-centered is-size-4 mt-5 mb-5">
+        <br>
     </div>
-    <br>
-    <div id="songName" class="albumInfo level-item has-text-centered is-size-4">
+    <div id="songName" class="albumInfo level-item has-text-centered is-size-4 mb-5">
+        <br>
     </div>
-    <br>
-    <div id="albumInfo" class="albumInfo level-item has-text-centered is-size-4 ">
+    <div id="albumInfo" class="albumInfo level-item has-text-centered is-size-4 mb-5">
+        <br>
     </div>
-    <br>
     <div class="columns">
         <div class="column is-2"></div>
         <div class="column">
-            <div id="artistInfo" class="artistInfo level-item has-text-centered is-size-4">
+            <div id="artistInfo" class="artistInfo is-size-4">
             </div>
         </div>
         <div class="column is-2"></div>
     </div>
-
     <div class="is-size-4 has-text-weight-bold has-text-centered"> Minutes spent practicing:
     </div>
     <div class="is-size-4 has-text-weight-bold has-text-centered">
@@ -107,18 +110,18 @@
         <div class="columns">
             <div class="column is-3"></div>
             <div class="column is-3">
-                <a href="https://www.musictheory.net/">Musictheory.net</a>
+                <a target="_blank" href="https://www.musictheory.net/">Musictheory.net</a>
                 <br>
-                <a href="https://www.onlinepianist.com/virtual-piano">Virtual Piano - Online Pianist</a>
+                <a target="_blank" href="https://www.onlinepianist.com/virtual-piano">Virtual Piano - Online Pianist</a>
                 <br>
-                <a href="https://www.fender.com/online-guitar-tuner">Guitar Tuner - Fender</a>
+                <a target="_blank" href="https://www.fender.com/online-guitar-tuner">Guitar Tuner - Fender</a>
             </div>
             <div class="column is-3">
-                <a href="https://tuner.ninja/ ">Chromatic Tuner – Tuner Ninja</a>
+                <a target="_blank" href="https://tuner.ninja/ ">Chromatic Tuner – Tuner Ninja</a>
                 <br>
-                <a href="https://www.musicca.com/metronome">Metronome - Musicca</a>
+                <a target="_blank" href="https://www.musicca.com/metronome">Metronome - Musicca</a>
                 <br>
-                <a href="https://www.songsterr.com/">Guitar Tabs - Songsterr</a>
+                <a target="_blank" href="https://www.songsterr.com/">Guitar Tabs - Songsterr</a>
             </div>
             <div class="column is-3"></div>
         </div>
