removed unused code and adjusted blues instructions to improve grammar and flow

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="columns">
         <div class="column is-1"></div>
         <div class="column">
-            <p id="instructions" class=is-size-4></p>
+            <p id="instructions" class="is-size-4"></p>
         </div>
         <div class="column is-1"></div>
     </div>
