changed page title to My Practice Companion

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="lastfm.api.md5.js"></script>
     <script type="text/javascript" src="lastfm.api.js"></script>
     <script type="text/javascript" src="lastfm.api.cache.js"></script>
-    <title>Scale Practice</title>
+    <title>My Practice Companion</title>
 </head>
 
 <body>
