--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
         <div class="column is-1"></div>
     </div>
     <br>
-    <div id="buttons" class="columns level-item has-text-centered">
-        <div id="btnCol" class="field has-addons is-centered">
-        </div>
+    <div id="buttons" class="is-align-items-end level-item has-text-centered is-flex-wrap-wrap">
     </div>
     <div id="appendKey" class="is-size-3 has-text-centered has-text-weight-bold"></div>
     <div id="appendSteps" class="is-size-3 has-text-centered "></div>
